<resources>
    <string name="app_name">दौँघा</string>
    <string name="acceptance_text"> यसबाट  प्राप्त सूचना तथा जानकारी अनाधिकिरित रुपमा प्रयोग गर्न मनाही छ | यदि प्रयोग गरेको पाईएमा  प्रचलित कानुन बमोजिम कारबाही गरिनेछ | </string>
    <string name="agree_text">माथिको  सर्त संग मा पूर्ण रुपमा सहमत छु । </string>
    <string name="go_ahead">अगाडी जानुहोस </string>
    <string name="message">अनुमति दिईयो</string>
    <string name="title_text">गुल्मी दौँघेली समाज काठमाडौँ\n स्थाः २०७०  </string>
    <string name="slogan_text">“समग्र दौँघाको सामाजिक, साँस्कृतिक, आर्थिक, शैक्षिक, खेलकुद, पर्यटकिय तथा ऐतिहासिक विशिष्टताको सँरक्षण र प्रवर्धनको लागि दौँघेली समाज”</string>
    <string name="hamro_barema">हाम्रो बारेमा</string>
    <string name="name">नाम :</string>
    <string name="name_value">चन्द्र सर्तुङे</string>
    <string name="address">thegana</string>
    <string name="address_value">गुल्मी </string>
    <string name="title">title</string>
    <string name="daungha_ko_chinari">दौघाको चिनारी </string>
    <string name="phone_diary">फोन डायरी </string>
    <string name="jankari_suchana">जानकारी/सुचनाहरु </string>
    <string name="photo_gallery">फोटो ग्यालरी </string>
    <string name="sahayog_samparka"> सहयोग सम्पर्क </string>
    <string name="map">नक्सा</string>
    <string name="homepage">गृह पृष्ठ</string>
    <string name="samparkaNo">सम्पर्क नं :</string>
    <string name="no_internet">इन्टरनेट जडान छैन ।</string>
    <string name="update">अप्डेट</string>
    <string name="please_wait">कृपया पर्खनुहोस्...</string>
    <string name="sth_went_wrong">केहि गलत भयो</string>
    <string name="daughali_samaj_ktm">दौंघेली समाज काठमाडौ</string>
    <string name="hamro_barema_title">दौंघेली समाज काठमाडौं गैरनाफामुलक सामाजिक संस्था हो । नेपालको प्रदेश नं. ५ अन्तरगत छत्रकोट गाउँपालिका ६ नं वार्ड दौंघामा जन्म भई स्थायी वा अस्थाईरुपमा देशका विभिन्न ठाउँ क्षेत्रमा बसोबास गर्ने व्यक्तीहरुको आपसी सम्बन्धलाई अझै मजबुद बनाउँदै समग्र दौंघाको सामाजिक, आर्थिक, सांस्कृतिक, एैतिहासिक, प्राकृतिक, शैक्षीक, खेलकुद तथा पर्यटकीय विशिष्टताको संरक्षण, सम्बद्र्धन र प्रबद्र्धन गर्ने उद्देश्यले दौंघेली समाज काठमाडौंको स्थापना २०७० साल साउन २८ गते काठमाडौं जिल्ला प्रशासन कार्यालयमा दर्ता भई संचालनमा रहेको छ । यसको मुख्य कार्यालय काठमाडौंमा रहेको छ । दौंघेली समाज काठमाडौंले हरेक वर्ष वार्षिक क्यालेण्डर, वनभोज, तीज कार्यक्रम, टेलीफोन डायरी प्रकाशन, भेटघाट कार्यक्रम, पुनर्मिलन कार्यक्रम, दौंघाको अन्य सम्पूर्ण पक्षको हितमा कार्य गर्दै आइरहेको छ । हाल दौंघेली समाज काठमाडौंमा सात सदस्यीय कार्यसमिति हरको छ, जसमा ः</string>
    <string name="lekhharu">लेखहरु</string>
</resources>
