<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="12dp"
    tools:context=".activities.AgreementActivity">

    <TextView
        android:id="@+id/acceptance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/acceptance_text"
        android:textColor="@color/white"
        android:textFontWeight="300"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/checkbox_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="32dp"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/checkbox"
                android:text="@string/agree_text"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/go_ahead_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_section"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="48dp"
            android:gravity="end|bottom"
            android:text="@string/go_ahead"
            android:textColor="@color/white" />
    </RelativeLayout>


</RelativeLayout>