<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DashboardActivity">


    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/top_content"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_margin="12dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/title_text"
                android:textColor="@color/white"
                android:textFontWeight="300"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/slogan_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_content"
        android:layout_margin="12dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color1"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">


                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/hamro_barema"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color2"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/daungha_ko_chinari"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color3"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/phone_diary"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color4"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/jankari_suchana"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color5"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/photo_gallery"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color6"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gallery_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/sahayog_samparka"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/color7"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="12dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/map" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:paddingBottom="8dp"
                            android:text="@string/map"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp">

                        <ImageView
                            android:id="@+id/image_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/image_three" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/hamro_barema"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>